--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ input{
     background-color: #DCDCDC;
     border: none;
 }
-error-warning{
+.error-warning{
+    display: none;
     color: #f02849;
 }
